--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "swagger-ui-express": "^4.1.5"
   }
 }
